src/service_exposing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weaviate-service
  namespace: webisstud
spec:
  selector:
    statefulset.kubernetes.io/pod-name: weaviate-0
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
